:bug: Fixes the use of a collector.